@@ -8,6 +8,7 @@ documents those changes that are of interest to users and admins.
  -- Added new scontrol command "show nodes <list>", returns a list of
     of nodes (one node per line) from SLURM hostlist expression or from
     SLURM_NODELIST environment variable if no hostlist specified.
+ -- Add the sbatch option "--wrap".
 
 * Changes in SLURM 1.2.10
 =========================
